<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/table_fragment"
    tools:context=".TableFragment">

    <LinearLayout
        android:id="@+id/weightTableHeaders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".AddWeightActivity">

        <TextView
            android:id="@+id/timeHeader"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/date"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/colorTableHeader"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/weightHeader"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/weight"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/colorTableHeader"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bmiHeader"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/bmi"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/colorTableHeader"
            android:textSize="18sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/deltaHeader"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/goal"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/colorTableHeader"
            android:textSize="18sp"
            android:visibility="gone"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weightRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightTableHeaders" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/weightTableAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_weight"
        app:backgroundTint="@color/colorTableHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>